payouts-network-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payouts-network-frontend
  labels:
    app: payouts-network-frontend
spec:
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: payouts-network-frontend
